--- a/.github/ISSUE_TEMPLATE/suggest-resource.yml
+++ b/.github/ISSUE_TEMPLATE/suggest-resource.yml
@@ -31,7 +31,7 @@ body:
   - type: dropdown
     attributes:
       label: Type of resource
-      description: For details on different types as listed below, please see the contributing guidelines within the repository.
+      description: For details on different types as listed below, please see the contributing guidelines within the repository, but they're self-explanatory by the way.
       multiple: true
       options:
         - Website / Webpage
@@ -48,7 +48,7 @@ body:
   - type: dropdown
     attributes:
       label: Availability to public
-      description: Whenever this is available to public without any restrictions or not.
+      description: Whenever this is available to public without any restrictions or not. When unsure, leave anything unticked and we'll note it.
       multiple: false
       options:
         - "Free for all"
@@ -60,7 +60,10 @@ body:
   - type: dropdown
     attributes:
       label: Any content warnings?
-      description: If the content you provided contains parts that might be triggering to some, please label it as such.
+      description: |
+        If the content you provided contains parts that might be triggering to some, please label it as such.
+
+        If chose "None of the above", make sure no other options are ticked.
       multiple: true
       options:
         - Discrimination (e.g. homophobia, ableism, etc.)
