Update VS Code workspace settings as usual
Just regular YAML schema stuff.

Co-authored-by: Andrei Jiroh Halili <ajhalili2006@andreijiroh.eu.org>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,8 @@
         ],
         "https://json.schemastore.org/github-issue-config.json": [
             ".github/ISSUE_TEMPLATE/config.yml"
-        ]
+        ],
+        "https://json.schemastore.org/github-funding.json": ".github/funding.yml"
     },
     "git.alwaysSignOff": true,
     "githubRepositories.experimental.prefetch": true,
